--- a/day_2.ipynb
+++ b/day_2.ipynb
@@ -49,7 +49,7 @@
     "# каждый элемент первого уровня содержит другой массив... \n",
     "# второй уровень - числа\n",
     "\n",
-    "array = np.array([[1, 2,], [3, 4]])\n",
+    "array = np.array([[1, 2], [3, 4]])\n",
     "array"
    ]
   },
@@ -918,7 +918,7 @@
     }
    ],
    "source": [
-    "# получить записи по индексу таблицыб и выборочно колонки\n",
+    "# получить записи по индексу таблицы, и выборочно колонки\n",
     "\n",
     "dataframe.loc[dataframe.index[:4:2]][dataframe.columns[:3]]"
    ]
@@ -991,7 +991,7 @@
    ],
    "source": [
     "# на тот случай, если мы хотим изображение больше\n",
-    "plt.figure(figsize=(10, 10)) # длина и высота. ... в дюймах!\n",
+    "plt.figure(figsize=(10, 10)) # длина и высота... в дюймах!\n",
     "\n",
     "# точечная диаграмма\n",
     "plt.scatter(np.cos(range(50)), np.sin(range(50)));"
@@ -1016,7 +1016,7 @@
     }
    ],
    "source": [
-    "# диаграммы можно накладывать друг на друга - даже когда они разных типов\n",
+    "# диаграммы можно накладывать друг на друга даже когда они разных типов\n",
     "\n",
     "plt.bar(\n",
     "    range(10), # значения на оси абсцис\n",
@@ -1486,7 +1486,7 @@
    "source": [
     "**Коэффициенты практически одинаковые**.\n",
     "\n",
-    "Так что же представляет собой разведочный анализ? Давайте остановися на том, что это не просто подсчет описательных статистик (сколько, среднее, разраброс), но и построение диаграмм, на которых можно уловить какие-то зависимости, возможно даже глазами."
+    "Так что же представляет собой разведочный анализ? Давайте остановися на том, что это не просто подсчет описательных статистик (сколько, среднее, разброс), но и построение диаграмм, на которых можно уловить какие-то зависимости, возможно даже глазами."
    ]
   },
   {
@@ -1515,7 +1515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Здесь (для примера) мы видим некоторую изогнутую зависимость между весом ракушки и её диаметром. Может она степенная? Мы можем предположить, что извлечение квадратного корня \"исправит ситуацию\", и может превратить зависимость в линейную. Проверим хотя бы визуально, без метрик."
+    "Здесь мы видим некоторую изогнутую зависимость между весом ракушки и её диаметром. Может она степенная? Мы можем предположить, что извлечение квадратного корня \"исправит ситуацию\", и может превратить зависимость в линейную. Проверим хотя бы визуально, без метрик."
    ]
   },
   {
@@ -1858,7 +1858,7 @@
    "source": [
     "Смысл всего этого такой. Чтобы найти минимум ошибки, \n",
     "1. надо взять производную от этой самой ошибки по коэффициентам,\n",
-    "2. Далее двигаться в направлении уменьшения ошибки, изменяя случайно инициализированные коэффициенты на минус производную (то в сторону убывания ошибки),\n",
+    "2. Далее двигаться в направлении уменьшения ошибки, изменяя случайно инициализированные коэффициенты на минус производную (то есть в сторону убывания ошибки),\n",
     "3. И так сколько раз, сколько захотим (или пока ошибка не начнет меняться очень слабо).\n",
     "\n",
     "Например, если у нас \n",
@@ -2064,7 +2064,7 @@
     "\n",
     "`sigmoid(x) = 1 / (1 + exp(-x))`.\n",
     "\n",
-    "Она всегда от 0 до 1 невключительно. Её можно интерпретировать как *вероятность* того, что пример с признаками `x` относится к классу 1 (а не 0). В `scikit-learn` модель заведена под названием `LogisticRegression` (это не регрессия, несмотря на название, а классификация).\n",
+    "Она всегда от 0 до 1 невключительно. Её можно интерпретировать как *вероятность* того, что пример с признаками `x1, ..., xm` относится к классу 1 (а не 0). В `scikit-learn` модель заведена под названием `LogisticRegression` (это не регрессия, несмотря на название, а классификация).\n",
     "\n",
     "Попробуем отличить применить логистическую регрессию к датасету Iris."
    ]
@@ -2143,7 +2143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Как видим, здесь хороший случай, *линейно разделимый*. Посмотрим, как разделились классы на плоскости."
+    "Как видим, здесь хороший случай, практически *линейно разделимый*. Посмотрим, как разделились классы на плоскости."
    ]
   },
   {
@@ -2294,7 +2294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Здесь мы не стали ограничивать дерево по глубине, и видно, что оно чересчер глубоко погрузилось в данные. \n",
+    "> Здесь мы не стали ограничивать дерево по глубине, и видно, что оно \"слишком глубоко\" погрузилось в данные. \n",
     ">\n",
     "> **Одиночные деревья - всегда переобучаются!**\n",
     "\n",
@@ -2703,9 +2703,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **ОДНАКО**. Если мы используем функции активации, то мы должны для нейросетей использовать подходящий __препроцессинг__. Например, поскольку `tanh` меняется от -1 до 1, то и наша целевая величина должна меняться в тех же пределах! Это не совсем так уже для `relu`, но дело еще и в другом.\n",
+    "> **ОДНАКО**. Если мы используем функции активации, то мы должны для нейросетей использовать подходящий __препроцессинг__. Например, поскольку `tanh` меняется от -1 до 1, то и наша целевая величина должна меняться в тех же пределах! Это не совсем так уже для `relu` (его результат всегда больше нуля), но дело еще и в другом.\n",
     "\n",
-    "Нейросети хорошо работают с маленькими числами, так как большие числа дают большие значения производных (помните начало лекции?). Соответственно тогда легко проскочить минимум функции ошибки, при движении большими шагами. \n",
+    "Нейросети хорошо работают с маленькими числами, так как большие числа дают большие значения производных. Соответственно тогда легко проскочить минимум функции ошибки, при движении большими шагами. \n",
     "\n",
     "Поэтому мы рассмотрим два способа подготовки данных для нейросети: `standard scaling` и `minmax scaling`."
    ]
