--- a/day_3.ipynb
+++ b/day_3.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В прошлом дне мы видили, что есть хорошие и не очень хорошие признаки, которые дают прирост качеству модели, или наоборот её ухудшают. Так же мы наивно выставляли какие-то числа в модель - количество соседей, количество нейронов в слоях... то, что называется *гиперпараметрами модели*, при этом делали это несколько от потолка."
+    "В прошлых днях мы видели, что есть хорошие и не очень хорошие признаки, которые дают прирост качеству модели, или наоборот её ухудшают. Так же мы немного наивно выставляли какие-то числа в модель - количество соседей, количество нейронов в слоях... то, что называется *гиперпараметрами модели*, при этом делали это несколько от потолка."
    ]
   },
   {
@@ -451,7 +451,7 @@
    "source": [
     "Задача понижения размерности - это задача обучения без учителя, то есть когда у нас **нет правильных ответов**. Решение задач без разметки ответов часто используется для анализа и предобработки, например для отображения сложных данных.\n",
     "\n",
-    "Понижение размерности - это сжатие признаков датасета до более меньшего числа, при попытке не потерять информацию в нём и её полезные свойства. "
+    "Понижение размерности - это сжатие признаков датасета до более меньшего количества (размерности), при попытке не потерять информацию в них и их полезные свойства. "
    ]
   },
   {
@@ -650,7 +650,7 @@
     "Расстояние:\n",
     "- может быть евклидовым: `distance(a, b) = sqrt((a1 - b1)**2 + ... (ak - bk)**2)`,\n",
     "- косинусным: `distance(a, b) = 1 - косинус угла между векторами (a, b) = 1 - (a1*b1 + ... ak*bk) / sqrt(a1**2 + ... ak**2) / sqrt(b1**2 + ... bk**2)`,\n",
-    "- манхэтэннским (по координатным прямым между точками): `distance (a, b) = |a1 - b1| + ... |ak - bk|`,\n",
+    "- манхэттэнским (по координатным прямым между точками): `distance (a, b) = |a1 - b1| + ... |ak - bk|`,\n",
     "- есть и другие расстояния.\n",
     "\n",
     "Но как можно найти кластеры в данных? Давайте рассмотрим алгоритм, который разбивает точки на заранее заданное число кластеров.\n",
@@ -701,7 +701,7 @@
     "def clustering(number_clusters, X):\n",
     "    np.random.seed(1)\n",
     "    \n",
-    "    # первый шаг - случайная инициализация\n",
+    "    # шаг 1 - случайная инициализация\n",
     "    centroids = np.array([\n",
     "        [\n",
     "            np.random.uniform(X[:, 0].min(), X[:, 0].max()),\n",
@@ -728,7 +728,7 @@
     "            number_clusters, len(X)\n",
     "        )\n",
     "        \n",
-    "        # шаг3, присваеваем метки точкам\n",
+    "        # шаг 3, присваеваем метки точкам\n",
     "        clusters = []\n",
     "        for index in range(len(X)):\n",
     "            clusters.append(\n",
@@ -983,7 +983,7 @@
    "source": [
     "## 3.4 Поиск аномалий в данных\n",
     "\n",
-    "Поиск аномалий - также задача обучения без учителя, то есть что именно является аномалией - неизвестно, разметки нет. Однако аномалии - это данные, которые сильно отличаются от остальных, и это достаточно частая задача при анализе данных.\n",
+    "Поиск аномалий - тоже задача обучения без учителя, то есть что именно является аномалией - неизвестно, разметки нет. Однако аномалии - это данные, которые сильно отличаются от остальных, и это достаточно частая задача в аналитике.\n",
     "\n",
     "Например, поиск странных финансовых транзакций в банках. Мы же для примера поищем \"аномальные ракушки\". И первое что мы попробуем - это искать их с помощью деревьев.\n",
     "\n",
@@ -1079,7 +1079,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Как мы знаем, деревья действуют по осям, разбивая данные на части больше-меньше порога. Чем больше деревьев - тем глаже картина. Сейчас же мы посмотрим как работает метод `Local Outlier Factor` (*LOF*) на этих же данных.\n",
+    "Как мы знаем, деревья действуют по осям, разбивая данные на части больше-меньше порога. Чем больше деревьев - тем сглаженней картина. Сейчас же мы посмотрим как работает метод `Local Outlier Factor` (*LOF*).\n",
     "\n",
     "Он в каждой точке оценивает плотность относительно других точек (с помощью близости). Чем ниже эта плотность - тем аномальнее пример. Он позволяет (`novelty = True`) оценивать, из того же распределения новые данные (*inlier*) или нет (*outlier*), при этом считается что тренировочные данные - без выбросов!\n",
     "\n",
@@ -1428,7 +1428,7 @@
     "\n",
     "forecast = model.predict(future)\n",
     "\n",
-    "plt.title(\"Аддитивный прогноз с помощью prophet\\nкачество на отложенных %d точках R2: %.3f\" % (\n",
+    "plt.title(\"Мультипликативный прогноз с помощью prophet\\nкачество на отложенных %d точках R2: %.3f\" % (\n",
     "    len(airpassengers) - train, r2_score(\n",
     "        y_true=airpassengers['#Passengers'].values[train:],\n",
     "        y_pred=forecast.yhat.values[train:len(airpassengers)]\n",
@@ -1541,7 +1541,7 @@
     "\n",
     "Нет. Это достаточно простой ряд. `fbprophet` имеет большое количество настроек сам по себе. Более того, для временных рядов следует отбирать модель немного другим механизмом кросс-валидации:\n",
     "- сначала откладывается тренировочное множество,\n",
-    "- на нем получается модель, качество измеряется,\n",
+    "- на нем тренируется модель, качество измеряется на отложенном хвосте,\n",
     "- далее в тренировочное множество добавляются следующие точки (одна или несколько подряд),\n",
     "- снова измеряется качество... \n",
     "- и так нужно делать столько раз, сколько у вас сочетаний параметров.\n",
@@ -1556,7 +1556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Главное правило стэкинга - вы должны **обучать вторую модель на тех предсказаниях, которые были получены НЕ с тренировочного множества** первой модели. То есть (почти как) кросс-валидация - нельзя учить на тех же данных, про которые уже что-то известно.\n",
+    "Главное правило стэкинга - вы должны **обучать вторую модель на тех предсказаниях, которые были получены НЕ с тренировочного множества** первой модели. То есть (почти) как кросс-валидация - нельзя учить на тех же данных, про которые уже что-то известно.\n",
     "\n",
     "Иначе вы получите \"протечку\" в данных, а на выходе - переобученную модель. Она будет очень много (очень) знать про своё тренировочное множество, но не будет хорошо генерализовать искомую зависимость в данных. То есть тренировочных множества должно быть как минимум два."
    ]
@@ -1697,7 +1697,7 @@
    "source": [
     "С учетом кросс-валидации - практически то же самое.\n",
     "\n",
-    "Посмотрим, как можно использовать стэкинг для временных рядов. Для этого возьмем датасет *jena_climate* - датасет замера погодных характеристик около института (биогеохимии) Макса Планка в местечке *jena* (Германия)."
+    "Посмотрим, как можно использовать стэкинг для временных рядов. Для этого возьмем датасет *jena_climate* - датасет замера погодных характеристик около института (биогеохимии) Макса Планка в местечке *Jena* (Йена, Германия)."
    ]
   },
   {
