--- a/day_4.ipynb
+++ b/day_4.ipynb
@@ -29,9 +29,9 @@
     "\n",
     "Помимо упомянутого `Dense`-слоя, существуют следующие слои:\n",
     "1. Свёрточные (`Convolution`) - применяются обычно для обработки изображений. Они пробегают некоторым окном по всем входным признакам, и вычисляют *свертку* - некоторую функцию с весами сразу над несколькими признаками. Это мало того что позволяет сократить количество весов, но и конструировать новые (внутри сети) признаки.\n",
-    "2. Pooling (`Pooling`, обычно не переводят) - применение операции усреднения или взятия максимума над входными в слой признаками. Используются для снижения размерности сети и извлечения полезных признаков.\n",
+    "2. Pooling (`Pooling`, субдискретизация, обычно не переводят) - применение операции усреднения или взятия максимума над входными в слой признаками. Используются для снижения размерности сети и извлечения полезных признаков.\n",
     "3. Рекуррентные (`Recurrent`) - применяются для работы с последовательностями (тексты, временные ряды). Таким слоям на вход подаются последовательности, а они подстраивают свои веса с учетом структуры (если она есть конечно) последовательности.\n",
-    "4. Dropout (`Dropout`, обычно не переводят) - это особый слой, который... выбрасывает случайно заданный процент нейронов между слоями. Это позволяет *регуляризовывать* сеть (избегать переобучения), а так же делает все нейроны сети более \"осведомленными\", скажем так.\n",
+    "4. Dropout (`Dropout`, выбрасывание, обычно не переводят) - это особый слой, который... выбрасывает случайно заданный процент нейронов между слоями. Это позволяет *регуляризовывать* сеть (избегать переобучения), а так же делает все нейроны сети более \"осведомленными\", скажем так.\n",
     "5. Слои вложений (`Embeddings`) - полезны для работы с категориальными данными. Это так же и тексты (со словами из словаря). Такие слои представляют собой таблицу весов, которые переводят входные категории в вектора заданной размерности.\n",
     "\n",
     "Слои могут (и должны) использовать функцию активации: после умножения весов на вход и сложения, для нейрона полносвязного слоя например, она применяется к результату, чтобы не получить комбинацию линейных моделей (а получить комбинацию нелинейных). Комбинация линейных моделей - линейная модель. Мы уже рассматривали во втором дне `relu`, `tanh`, `sigmoid` (`logistic` в `scikit-learn`). \n",
@@ -171,8 +171,8 @@
    "source": [
     "Что мы задали в `compile`? \n",
     "\n",
-    "- `optimizer` - это способ поиска минимума функции ошибки. Существуют различные оптимизаторы, самые используемые: `rmsprop` (обычно для рекуррентных сетей), `sgd` (когда данных очень много), `adam` (один из самых лучших). Они как раз принимают решение, куда шагать с помощью вычисленной производной ошибки,\n",
-    "- `loss` - это как раз функция ошибки. Для бинарной классификации используют на последнем слое активацию `sigmoid` и `loss = 'binary_crossentropy`, у нас многоклассовая классификация - поэтому `categorical_crossentropy`. Кросс-энтропия тем ниже, чем меньше перепутаны предсказанные и истинные метки. Для регрессии же используют функции потерь `mae` (*mean_absolute_error*) или `mse` (*mean_squared_error*) - которые являются средним (абсолютным или квадратичным) отклонением предсказанного от известных значений,\n",
+    "- `optimizer` - это способ поиска минимума функции ошибки. Существуют различные оптимизаторы, самые используемые: `rmsprop` (обычно для рекуррентных сетей), `sgd` (когда данных очень много), `adam` (один из самых лучших). Они как раз принимают решение, насколько далеко шагать с помощью вычисленной производной ошибки,\n",
+    "- `loss` - это как раз функция ошибки. Для бинарной классификации используют на последнем слое активацию `sigmoid` и `loss = 'binary_crossentropy'`, у нас многоклассовая классификация - поэтому `'categorical_crossentropy'`. Кросс-энтропия тем ниже, чем меньше перепутаны предсказанные и истинные метки. Для регрессии же используют функции потерь `mae` (*mean_absolute_error*) или `mse` (*mean_squared_error*) - которые являются средним (абсолютным или квадратичным) отклонением предсказанного от известных значений,\n",
     "- `metrics` - это то, что в процессе обучение будет подсчитываться просто для информации или для отбора лучшей модели. В нашем случае `accuracy` - это процент правильных ответов.\n",
     "\n",
     "Ну что ж, обучим нашу нейросеть. При обучении мы зададим *количество эпох* и *размер пакета* (*batch size*). Одна эпоха - это один проход по всем тренировочным данным с выборкой размера пакета (то есть шагом в размер пакета). На каждый пакет подсчитываются (те самые) производные по параметрам для каждого пакета и обновляются веса нейросети."
@@ -1820,7 +1820,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Косинусное расстояние это мера угла от -1 (противоположные вектора) до +1 (сонаправленные). Почему косинусное расстояние? Чтобы не влияло количество слов. Если вектора преобразовать (разделить на их евклидову длину) - то косинусное расстояние будет выражаться через евклидово расстояние векторов."
+    "Косинусное расстояние это мера угла от -1 (противоположные вектора) до +1 (сонаправленные). Почему косинусное расстояние? Чтобы не влияло количество слов (то есть \"смысл\" в пространстве вложений задается направлением).\n",
+    "\n",
+    "Кстати, если вектора преобразовать (разделить на их евклидову длину) - то косинусное расстояние будет выражаться через евклидово расстояние векторов."
    ]
   },
   {
@@ -2028,7 +2030,7 @@
     "\n",
     "Непонятно? :) Да, картинка непонятна (это граф операций), формула на словах тоже.\n",
     "\n",
-    "А происходит вот что. При попадании серии в блок `GRU` делается проход по ней, в течении которого предыдущее состояние комбинируется с текущим элементом серии, и комбинация текущего и предыдущего состояния определяет выход. Веса определяются в процессе обучения, так чтобы дать минимум ошибки.\n",
+    "А происходит вот что. При попадании серии в блок `GRU` делается проход по ней, в течении которого предыдущее состояние комбинируется с текущим элементом серии, и комбинация текущего и предыдущего состояния определяет выход. Веса определяются в процессе обучения так, чтобы дать минимум ошибки.\n",
     "\n",
     "`GRU` таким образом также возвращает последовательности. Когда нужен только последний вектор, в `keras` можно задать слою настройку `return_sequences = False`. Давайте вернемся к нашей погоде в *Jena*."
    ]
